<resources>
    <string name="app_name">My Application</string>
    <string name="Reg">REGISTRATION FORM</string>
    <string name="fname">First Name</string>
    <string name="lname">Last name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
</resources>