<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reg"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="90sp"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fname"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHighlight="@android:color/black"
            android:fontFamily="serif-monospace"
            android:layout_marginHorizontal="15sp"
            android:layout_marginVertical="10sp"
            android:textStyle="bold"
            android:textSize="15sp">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lname"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHighlight="@android:color/black"
            android:fontFamily="serif-monospace"
            android:layout_marginHorizontal="15sp"
            android:layout_marginVertical="10sp"
            android:textStyle="bold"
            android:textSize="15dp">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHighlight="@android:color/black"
            android:fontFamily="serif-monospace"
            android:layout_marginHorizontal="15sp"
            android:layout_marginVertical="10sp"
            android:textStyle="bold"
            android:textSize="15dp">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress">
        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHighlight="@android:color/black"
            android:fontFamily="serif-monospace"
            android:layout_marginHorizontal="15sp"
            android:layout_marginVertical="10sp"
            android:textStyle="bold"
            android:textSize="15dp">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHighlight="@android:color/black"
            android:fontFamily="serif-monospace"
            android:layout_marginHorizontal="15sp"
            android:layout_marginVertical="10sp"
            android:textStyle="bold"
            android:textSize="15dp">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:foregroundGravity="center"
        android:text="@string/register"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="30dp">

    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>